--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.App{
+    text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ h1{
+    margin: 0;
+ }
+ .header{
+    background-color: rgb(78,192,78);
+    padding: 15px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .form{
+margin-top: 10px;
+display: flex;
+align-items: center;
+justify-content: center;
+ }
+ .data{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 20px;
+   width: 100%;
+ }
+ .data_bind{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   width: 60%;
+   padding: 0px 9px 0px 9px;
+   box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+ }
